--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -46,8 +46,8 @@ jobs:
       
       - name: Download and setup qshell
         run: |
-          wget https://devtools.qiniu.com/qshell-v2.12.0-linux-amd64.tar.gz
-          tar -xzf qshell-v2.12.0-linux-amd64.tar.gz
+          wget https://github.com/qiniu/qshell/releases/download/v2.16.1/qshell-v2.16.1-linux-amd64.tar.gz
+          tar -xzf qshell-v2.16.1-linux-amd64.tar.gz
           chmod +x qshell
           ./qshell account ${{ secrets.QINIU_ACCESS_KEY }} ${{ secrets.QINIU_SECRET_KEY }} qiniu
       
