refactor: update release workflow to simplify package naming and structure
Changed the output binary name from 'mockserver-linux-amd64' to 'mockserver' and adjusted the packaging process to use the tag name directly for directory and tarball creation. This improves clarity and consistency in the release artifacts.

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -29,20 +29,19 @@ jobs:
           GOARCH: amd64
           CGO_ENABLED: 0
         run: |
-          go build -trimpath -ldflags="-s -w" -o mockserver-linux-amd64 cmd/server/main.go
+          go build -trimpath -ldflags="-s -w" -o mockserver cmd/server/main.go
       
       - name: Create package
         run: |
           TAG_NAME=${{ steps.get_tag.outputs.TAG_NAME }}
-          PACKAGE_NAME="${TAG_NAME}_mockserver-linux-amd64"
           
-          mkdir -p ${PACKAGE_NAME}
-          cp mockserver-linux-amd64 ${PACKAGE_NAME}/
-          cp etc/mockserver.yaml ${PACKAGE_NAME}/
+          mkdir -p ${TAG_NAME}
+          cp mockserver ${TAG_NAME}/
+          cp etc/mockserver.yaml ${TAG_NAME}/
           
-          tar -czf ${PACKAGE_NAME}.tar.gz ${PACKAGE_NAME}
-          echo "Created package: ${PACKAGE_NAME}.tar.gz"
-          ls -lh ${PACKAGE_NAME}.tar.gz
+          tar -czf ${TAG_NAME}.tar.gz ${TAG_NAME}
+          echo "Created package: ${TAG_NAME}.tar.gz"
+          ls -lh ${TAG_NAME}.tar.gz
       
       - name: Download and setup qshell
         run: |
@@ -54,7 +53,7 @@ jobs:
       - name: Upload to Qiniu
         run: |
           TAG_NAME=${{ steps.get_tag.outputs.TAG_NAME }}
-          PACKAGE_NAME="${TAG_NAME}_mockserver-linux-amd64.tar.gz"
+          PACKAGE_NAME="${TAG_NAME}.tar.gz"
           REMOTE_PATH="mockserver/${PACKAGE_NAME}"
           ./qshell rput ${{ secrets.QINIU_BUCKET }} "${REMOTE_PATH}" ${PACKAGE_NAME}
           echo "Uploaded to: ${REMOTE_PATH}"
