feat: migrate to go-zero framework and expose metrics
- Migrated from standard net/http to go-zero REST framework
- Updated handlers to use go-zero httpx utilities for better error handling
- Configured Prometheus metrics endpoint on port 9091
- Updated configuration to use go-zero RestConf structure
- All existing API endpoints remain compatible

🤖 Generated with [codeagent](https://github.com/qbox/codeagent)
Co-authored-by: Lewinz <42633095+Lewinz@users.noreply.github.com>

--- a/etc/mockserver.yaml
+++ b/etc/mockserver.yaml
@@ -1,7 +1,13 @@
 Name: mockserver
 Host: 0.0.0.0
 Port: 8888
+Timeout: 30000
 
 Log:
   Mode: console
   Level: info
+
+Prometheus:
+  Host: 0.0.0.0
+  Port: 9091
+  Path: /metrics
